objects/VisitOps__Survey__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Incremental_business__c</fullName>
        <inlineHelpText>Did your visit result in any incremental business for us?</inlineHelpText>
        <label>Incremental business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Incremental_business_about_Visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else you’d like to tell us about the decision or the visit?</inlineHelpText>
        <label>Decision Survey Comments</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Incremental_business_byPercentage__c</fullName>
        <label>Incremental business by Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Incremental_business_by_Percentage__c</fullName>
        <inlineHelpText>If you awarded us any additional business, please estimate by what percent your purchase increased?</inlineHelpText>
        <label>Incremental Business by Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Least_Valuable_part_of_visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What was the least valuable part of your visit?</inlineHelpText>
        <label>Least Valuable Part of Visit</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Level_of_Agreement_Pre__c</fullName>
        <inlineHelpText>How much do you agree or disagree that VisitOps provides business solutions that can help improve your company’s performance?</inlineHelpText>
        <label>Belief in Business Solutions Before</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Level_of_agree_or_disagree_post__c</fullName>
        <inlineHelpText>How much do you agree or disagree that VisitOps provides business solutions that can help improve your company’s performance?</inlineHelpText>
        <label>Belief in Business Solutions After</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <default>true</default>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__LevelofSatisfactionFormula__c</fullName>
        <formula>CASE(VisitOps__Were_you_completely_satisfied__c , &apos;Completely Satisfied&apos;, &apos;Completely Satisfied&apos;, &apos;Mostly Satisfied&apos;, &apos;Mostly Satisfied&apos;,&apos;Somewhat satisfied&apos;,&apos;Somewhat satisfied&apos;,&apos;Not really satisfied at all&apos;,&apos;Not really satisfied at all&apos;,&apos;No Response&apos;)</formula>
        <label>Level of Satisfaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Likely_To_Recommend_Post__c</fullName>
        <inlineHelpText>Based on your visit, how likely are you to recommend Anthem to a friend or colleague?</inlineHelpText>
        <label>Likely To Recommend After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Likely_To_Recommend__c</fullName>
        <inlineHelpText>How likely are you to recommend Anthem to a friend or colleague?</inlineHelpText>
        <label>Likely To Recommend Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Most_Valuable_part_of_visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What was the most valuable part of your visit?</inlineHelpText>
        <label>Most Valuable Part of Visit</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__NPS_After_Visit__c</fullName>
        <description>This field determines whether the user is a Detractor or Promoter or Passive according to the likeliness of his/her recommendation to colleagues or associates post Visit.</description>
        <label>NPS After Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                    <color>#CC66CC</color>
                    <label>Promoter</label>
                </value>
                <value>
                    <fullName>Passive</fullName>
                    <color>#FF9900</color>
                    <label>Passive</label>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                    <color>#3366FF</color>
                    <label>Detractor</label>
                </value>
                <value>
                    <fullName>No Response</fullName>
                    <color>#57F17C</color>
                    <label>No Response</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__NPS_Before_Visit__c</fullName>
        <description>This field determines whether the user is a Detractor or Promoter or Passive according to the likeliness of his/her recommendation to colleagues or associates prior to Visit.</description>
        <label>NPS Before Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                    <color>#CC66CC</color>
                    <label>Promoter</label>
                </value>
                <value>
                    <fullName>Passive</fullName>
                    <color>#FF9900</color>
                    <label>Passive</label>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                    <color>#3366FF</color>
                    <label>Detractor</label>
                </value>
                <value>
                    <fullName>No Response</fullName>
                    <color>#57F17C</color>
                    <label>No Response</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Participation_Ease__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else we could have done to make your participation in this visit easier or more efficient?</inlineHelpText>
        <label>Participation Ease</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post-Survey status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_visit_Communication__c</fullName>
        <inlineHelpText>Post- visit Communication</inlineHelpText>
        <label>Post- visit Communication</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Survey status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Visit_Communication__c</fullName>
        <inlineHelpText>Pre-Visit Communication</inlineHelpText>
        <label>Pre-Visit Communication</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Preparation_by_Visit_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else that would have been helpful to know before the visit?</inlineHelpText>
        <label>Preparation by Visit Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Agenda_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter Agenda Link</label>
        <referenceTo>VisitOps__Presenter_Agenda_Link__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Recommendation_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else you’d like to tell us about your visit?</inlineHelpText>
        <label>Recommendation Comments</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Recommendation_Strategy__c</fullName>
        <inlineHelpText>How likely are you to recommend a visit to the Client Experience Center as part of a sales strategy to other account/sales teams?</inlineHelpText>
        <label>Sales Strategy Recommendation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Recommendation__c</fullName>
        <inlineHelpText>Would you recommend these sessions and presenters to other Visit Owners / Salespeople?</inlineHelpText>
        <label>Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Respondent_Company__c</fullName>
        <formula>IF(NOT(ISBLANK(VisitOps__User__c)),VisitOps__User__r.CompanyName,  IF( NOT(ISBLANK(VisitOps__Attendee__r.VisitOps__Contact__c)),
VisitOps__Attendee__r.VisitOps__Contact__r.Account.Name,VisitOps__Attendee__r.VisitOps__Company__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Respondent Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Respondent_Title__c</fullName>
        <formula>IF(NOT(ISBLANK(VisitOps__User__c)),VisitOps__User__r.Title,  IF( NOT(ISBLANK(VisitOps__Attendee__r.VisitOps__Contact__c)),
VisitOps__Attendee__r.VisitOps__Contact__r.Title,VisitOps__Attendee__r.VisitOps__Title__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Respondent Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Respondent__c</fullName>
        <formula>IF(NOT(ISBLANK(VisitOps__Presenter_Agenda_Link__c)), VisitOps__Presenter_Agenda_Link__r.VisitOps__Presenter_Name__c, 
IF(NOT(ISBLANK(VisitOps__User__c)),VisitOps__User__r.FirstName+&apos; &apos;+ VisitOps__User__r.LastName, VisitOps__Attendee__r.VisitOps__Attendee_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Respondent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Room_Preparation__c</fullName>
        <inlineHelpText>Room Preparation</inlineHelpText>
        <label>Room Preparation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Satisfaction_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Satisfaction Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Satisfaction_Rating__c</fullName>
        <description>Visit Satisfaction Rating</description>
        <inlineHelpText>Overall, how satisfied were you with the visit?</inlineHelpText>
        <label>Satisfaction Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Strategy_Call_Facilitation__c</fullName>
        <inlineHelpText>Strategy Call Facilitation</inlineHelpText>
        <label>Strategy Call Facilitation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Things_To_Be_Aware_of_After__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else we should know about your visit experience?</inlineHelpText>
        <label>Things To Be Aware of After</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Things_You_Would_Leave_The_Same__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you were to hold this same visit tomorrow, what would you leave the same?</inlineHelpText>
        <label>Things You Would Leave The Same</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Things_You_Would_Like_To_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you were to hold this same visit tomorrow, what would you change?</inlineHelpText>
        <label>Things You Would Like To Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Things_to_Accomplish__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What is the one most important thing you want to accomplish during your visit?</inlineHelpText>
        <label>Things to Accomplish</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Things_to_know_pre__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else we should know prior to your visit?</inlineHelpText>
        <label>Things To Be Aware of Before</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Thought_with_our_CEO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you could share one thought with our CEO, what would it be?</inlineHelpText>
        <label>Thoughts to share with our CEO</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Topic_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Presenter</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitArrivalDateTimeLocationTZ__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c</formula>
        <label>Visit Arrival Date and Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitDepartureDateTimeLocationTZ__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c</formula>
        <label>Visit Departure Date and Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Arrival_Date_and_Time__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__ArrivalDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Arrival Date and Time (User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Bundle</label>
        <referenceTo>VisitOps__VisitBundle__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Departure_Date_and_Time__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__DepartureDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Departure Date and Time (User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Experience__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else we should know about your visit experience?</inlineHelpText>
        <label>Visit Experience</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Manager_Expertise__c</fullName>
        <inlineHelpText>Visit Manager Expertise</inlineHelpText>
        <label>Visit Manager Expertise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Name__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Number__c</fullName>
        <formula>VisitOps__Visit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__Were_you_completely_satisfied__c</fullName>
        <inlineHelpText>Overall, how satisfied were you with the visit?</inlineHelpText>
        <label>Level of Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__component_Net_promotor__c</fullName>
        <label>component Net promoter Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__isPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the survey entry is actually created manually by printing it and not actually electronically sent to recipient.</description>
        <label>Printed Survey?</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Respondent__c</columns>
        <columns>VisitOps__Respondent_Company__c</columns>
        <columns>VisitOps__Respondent_Title__c</columns>
        <columns>VisitOps__Pre_Survey_status__c</columns>
        <columns>VisitOps__Post_Survey_status__c</columns>
        <columns>VisitOps__Visit_Number__c</columns>
        <columns>VisitOps__Visit_Name__c</columns>
        <columns>VisitOps__VisitArrivalDateTimeLocationTZ__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SY{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>VisitOps__Customer_Survey</fullName>
        <active>true</active>
        <label>Customer Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>VisitOps__Decision_Survey</fullName>
        <active>true</active>
        <label>Decision Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>VisitOps__PresenterSurvey</fullName>
        <active>true</active>
        <description>Record Type for Presenter layout</description>
        <label>PresenterSurvey</label>
    </recordTypes>
    <recordTypes>
        <fullName>VisitOps__Visit_Owner_Survey</fullName>
        <active>true</active>
        <label>Visit Owner Survey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>